--- a/www.hookamonk.com/lambdas/contact-form/email-templates/welcome-inlined.html
+++ b/www.hookamonk.com/lambdas/contact-form/email-templates/welcome-inlined.html
@@ -144,14 +144,6 @@
  </o:OfficeDocumentSettings>
 </xml>
 <![endif]-->
-    <!--
- _     _             _                      _ _   _
-| |   | |           | |                    (_) | (_)
-| |__ | |_ _ __ ___ | | ___ _ __ ___   __ _ _| |  _  ___
-| '_ \| __| '_ ` _ \| |/ _ \ '_ ` _ \ / _` | | | | |/ _ \
-| | | | |_| | | | | | |  __/ | | | | | (_| | | |_| | (_) |
-|_| |_|\__|_| |_| |_|_|\___|_| |_| |_|\__,_|_|_(_)_|\___/
--->
   </head>
   <body style="font-family: Helvetica, sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; background-color: #f6f6f6; margin: 0; padding: 0;">
     <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color: #f6f6f6;" width="100%" bgcolor="#f6f6f6">
@@ -161,14 +153,14 @@
           <div class="content" style="box-sizing: border-box; display: block; margin: 0 auto; max-width: 600px; padding: 0;">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">This is preheader text. Some clients will show this text as a preview.</span>
+            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Hookamonk / Thank you for getting in touch!</span>
 
             <!-- START HEADER -->
             <div class="header" style="margin-bottom: 24px; margin-top: 0; width: 100%;">
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; min-width: 100%;" width="100%">
                 <tr>
                   <td class="align-center" style="font-family: Helvetica, sans-serif; font-size: 14px; vertical-align: top; text-align: center;" valign="top" align="center">
-                    <a href="https://www.hookamonk.com" target="_blank" style="color: #3498db; text-decoration: underline;"><img src="logo.png" width="217" height="55" alt="Logo" align="center" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;"></a>
+                    <a href="https://www.hookamonk.com" target="_blank" style="color: #3498db; text-decoration: underline;"><img src="https://www.hookamonk.com/img/logo.png" width="217" height="55" alt="Logo" align="center" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;"></a>
                   </td>
                 </tr>
               </table>
@@ -189,7 +181,7 @@
                           <tbody>
                           <tr>
                             <td style="font-family: Helvetica, sans-serif; font-size: 14px; vertical-align: top; padding-left:12px;" valign="top" align="center">
-                              <img src="email-header.png" alt="Helpful placeholder image text" width="582" class="img-responsive" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;">
+                              <img src="https://www.hookamonk.com/img/email-header.png" alt="Warp product photo" width="582" class="img-responsive" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;">
                             </td>
                           </tr>
                           </tbody>
@@ -208,8 +200,8 @@
                           </tbody>
                         </table>
                         <p style="font-family: Helvetica, sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 16px;">Dear customer,</p>
-                        <p style="font-family: Helvetica, sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 16px;">Thanks for getting in touch with us, your request for Warp at home has been well received and we will get back to you as soon as possible.</p>
-                        <p style="font-family: Helvetica, sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 16px;">Thanks and regards,<br/><a href="mailto:sales@hookamonk.com">Hookamonk team</a></p>
+                        <p style="font-family: Helvetica, sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 16px;">Thanks for getting in touch with us, your request for <a href="https://www.hookamonk.com/{{productUrl}}" style="color: #EDA643; font-weight: bold">{{productName}}</a> has been well received and we will get back to you as soon as possible.</p>
+                        <p style="font-family: Helvetica, sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 16px;">Thanks and regards,<br/><a href="mailto:sales@hookamonk.com" style="color: #EDA643; font-weight: bold">Hookamonk team</a></p>
                       </td>
                     </tr>
                   </table>
@@ -227,8 +219,8 @@
                     <table border="0" cellpadding="0" cellspacing="0" class="social-sharing" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto; margin: 0 auto; text-align: center;" align="center">
                       <tr>
                         <td style="font-family: Helvetica, sans-serif; vertical-align: top; font-size: 12px; color: #999999; text-align: center;" valign="top" align="center">
-                          <a href="https://www.facebook.com/sharer/sharer.php?u&#x3D;http%3A//hookamonk.com" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;"><img src="facebook.png" alt="Like us on Facebook" width="44" class="social-sharing-icon" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; height: 44px; margin: 0 2px;"></a>&nbsp;
-                          <a href="" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;"><img src="instagram.png" alt="Follow us on Instagram" width="44" class="social-sharing-icon" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; height: 44px; margin: 0 2px;"></a>&nbsp;
+                          <a href="https://www.facebook.com/hookamonk/" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;"><img src="https://www.hookamonk.com/img/facebook.png" alt="Like us on Facebook" width="44" class="social-sharing-icon" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; height: 44px; margin: 0 2px;"></a>&nbsp;
+                          <a href="https://www.instagram.com/hookamonk/" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;"><img src="https://www.hookamonk.com/img/instagram.png" alt="Follow us on Instagram" width="44" class="social-sharing-icon" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; height: 44px; margin: 0 2px;"></a>&nbsp;
                         </td>
                       </tr>
                     </table>
