--- a/securitylab.topmonks.com/src/html/index.html
+++ b/securitylab.topmonks.com/src/html/index.html
@@ -15,30 +15,36 @@
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/header.css">
-
+  <link rel="script" href="/assets/js/index.js">
 
   <!-- Material Design Components -->
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
+  <!-- JQuery -->
+  <script src="jquery-3.5.1.min.js"></script>
+
 </head>
 
 <body>
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="header__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="header__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <a class="tm-logo tm-logo--desktop" href="/" title="Go to homepage">
-               <img alt="[Logo] TopMonks Security Lab" src="/assets/icon/logo-desktop.svg"/>
-         </a>
+          <img alt="[Logo] TopMonks Security Lab" src="/assets/icon/logo-desktop.svg"/>
+        </a>
         <a class="tm-logo tm-logo--phone" href="/" title="Go to homepage">
-               <img alt="[Logo] TopMonks Security Lab" src="/assets/icon/logo-phone.svg"/>
-         </a>
+          <img alt="[Logo] TopMonks Security Lab" src="/assets/icon/logo-phone.svg"/>
+        </a>
       </div>
 
       <div class="btn btn__action mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet">
-          <a class="action-button" href="#">Chci od vás pomoc</a>
+        <a class="action-button" href="#">Chci od vás pomoc</a>
       </div>
-      <div class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-2-desktop">
+      <div
+        class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-2-desktop">
         <div class="tm-hamburger__container">
           <div class="tm-hamburger__bar"></div>
           <div class="tm-hamburger__bar"></div>
@@ -56,7 +62,7 @@
     <div class="btn__hamburger">
       <a class="action-button" href="mailto:securitylab@topmonks.com">securitylab@topmonks.com</a>
     </div>
-      </nav>
+  </nav>
   <script>
     var appBar = document.querySelector(".tm-app-bar");
     var hamburger = document.querySelector(".tm-hamburger__container");
@@ -103,7 +109,7 @@
         </div>
       </div>
       <div class="intro__img mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
-        <img alt="[Image] Kybernetické útoky" src="/assets/icon/header-icon.svg"/>
+        <img alt="[Image] Kybernetické útoky" src="/assets/css/header-icon.svg"/>
       </div>
     </div>
   </div>
@@ -122,7 +128,7 @@
         </ul>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <img alt="[Image] Hardware" src="/assets/icon/hardware-icon.svg"/>
+        <img alt="[Image] Hardware" src="/assets/css/hardware-icon.svg"/>
       </div>
       <div class="security-fields mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>Hardware</h3>
@@ -157,6 +163,12 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3>Software</h3>
         <div class="mdc-layout-grid__inner">
+          <div class="security-fields__btn mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <a href="#">Technická bezpečnost</a>
+          </div>
+          <div class="security-fields__btn mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <a href="#">Konfigurační audit</a>
+          </div>
           <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p>Ethical hacking</p>
           </div>
@@ -187,9 +199,8 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <img alt="[Image] Software" src="/assets/icon/software-icon.svg"/>
+        <img alt="[Image] Software" src="/assets/css/software-icon.svg"/>
       </div>
-
 
       <div class="section-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <ul>
@@ -198,6 +209,7 @@
           <li class="active">Social Engineering</li>
         </ul>
       </div>
+
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <img alt="[Image] Social" src="/assets/icon/social-icon.svg"/>
       </div>
@@ -225,12 +237,47 @@
     </div>
   </div>
 </section>
-<section class="contact">
+<footer class="contact">
   <h2>Kontakt</h2>
   <div class="btn btn__email">
     <a class="action-button" href="mailto:securitylab@topmonks.com">securitylab@topmonks.com</a>
   </div>
-</section>
+</footer>
+<div class="wrapper">
+  <div class="tabs">
+    <ul id="tabs_ul">
+      <li class="active" data-list="tab_1">
+        <img src="https://i.imgur.com/aelCqkn.png" alt="">
+        <p>Bicycle</p>
+      </li>
+      <li data-list="tab_2">
+        <img src="https://i.imgur.com/Z5chKaj.png" alt="">
+        Bike</li>
+      <li data-list="tab_3">
+        <img src="https://i.imgur.com/qM93vBh.png" alt="">
+        Car</li>
+      <li data-list="tab_4">
+        <img src="https://i.imgur.com/hG9lT5Z.png" alt="">
+        Truck</li>
+    </ul>
+  </div>
+  <div class="content">
+    <div class="tab_content tab_1" id="tab_1" style="display:block;">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </div>
+    <div class="tab_content tab_2" id="tab_2" style="display:none;">
+      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+    </div>
+    <div class="tab_content tab_3" id="tab_3" style="display:none;">
+      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+    </div>
+    <div class="tab_content tab_4" id="tab_4" style="display:none;">
+      making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics
+    </div>
+  </div>
+</div>
+
+
 
 </body>
 
