--- a/securitylab.topmonks.com/src/html/index.html
+++ b/securitylab.topmonks.com/src/html/index.html
@@ -22,7 +22,7 @@
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
   <!-- JQuery -->
-  <script src="jquery-3.5.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 </head>
 
@@ -122,9 +122,9 @@
       </div>
       <div class="section-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <ul>
-          <li class="active">Hardware</li>
-          <li class="inactive">Software</li>
-          <li class="inactive">Social Engineering</li>
+          <li class="menu--active">Hardware</li>
+          <li class="menu--inactive">Software</li>
+          <li class="menu--inactive">Social Engineering</li>
         </ul>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -155,48 +155,96 @@
 
       <div class="section-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <ul>
-          <li class="inactive">Hardware</li>
-          <li class="active">Software</li>
-          <li class="inactive">Social Engineering</li>
+          <li class="menu--inactive">Hardware</li>
+          <li class="menu--active">Software</li>
+          <li class="menu--inactive">Social Engineering</li>
         </ul>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>Software</h3>
+      <div class="tabs mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <ul id="tabs_ul">
+          <li class="active" data-list="tab_1">
+            <p>Technická bezpečnost</p>
+          </li>
+          <li data-list="tab_2">
+            <p>Konfigurační audit</p>
+        </ul>
         <div class="mdc-layout-grid__inner">
-          <div class="security-fields__btn mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-            <a href="#">Technická bezpečnost</a>
-          </div>
-          <div class="security-fields__btn mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-            <a href="#">Konfigurační audit</a>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Ethical hacking</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrační testy WWW (OWASP)</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrační testy mobilních aplikací</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrační testy API / web services</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Externí penetrační testy</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Interní penetrační testy</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrační testy SCADA</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrační testy Wi-Fi</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Zátěžové testy (DoS)</p>
+          <div class="content mdc-layout-grid__cell--span-12">
+            <div class="tab_content tab_1" id="tab_1">
+              <div class="security-fields__cell">
+                <p>Ethical hacking</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Penetrační testy WWW (OWASP)</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Penetrační testy mobilních aplikací</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Penetrační testy API / web services</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Externí penetrační testy</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Interní penetrační testy</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Penetrační testy SCADA</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Penetrační testy Wi-Fi</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Zátěžové testy (DoS)</p>
+              </div>
+            </div>
+            <div class="tab_content tab_2" id="tab_2" style="display:none;">
+              <div class="security-fields__cell">
+                <p>Hardening Microsoft Windows</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Hardening UNIX</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Hardening Microsoft SQL</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Hardening Oracle DB</p>
+              </div>
+            </div>
           </div>
         </div>
+        <script>
+          $(".content .tab_content").hide();
+          $(".content .tab_content:first-child").show();
+
+          $("ul li").click(function() {
+
+            $("ul li").removeClass("active");
+            $(this).addClass("active");
+
+            var current_tab = $(this).attr("data-list");
+            $(".content .tab_content").hide();
+            $("." + current_tab).show();
+          });
+
+
+          var ul = document.getElementById("tabs_ul");
+          var li_tabs = ul.getElementsByTagName("li");
+          for (var i = 0; i < li_tabs.length; i++) {
+            li_tabs[i].addEventListener("click", function() {
+              var current = ul.getElementsByClassName("active");
+              current[0].className = current[0].className.replace("active", "");
+              this.className += "active";
+
+              var current_tab_value = this.getAttribute("data-list");
+              document.getElementById(current_tab_value).style.display = "block";
+
+            });
+          }
+
+        </script>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <img alt="[Image] Software" src="/assets/css/software-icon.svg"/>
@@ -204,34 +252,118 @@
 
       <div class="section-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <ul>
-          <li class="inactive">Hardware</li>
-          <li class="inactive">Software</li>
-          <li class="active">Social Engineering</li>
+          <li class="menu--inactive">Hardware</li>
+          <li class="menu--inactive">Software</li>
+          <li class="menu--active">Social Engineering</li>
         </ul>
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <img alt="[Image] Social" src="/assets/icon/social-icon.svg"/>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h3>Read team</h3>
+      <div class="tabs2 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <ul id="tabs_ul2">
+          <li class="active2" data-list="tab_3">
+            <p>Read team</p>
+          </li>
+          <li data-list="tab_4">
+            <p>Ostatní</p>
+          </li>
+          <li data-list="tab_5">
+            <p>Procesní bezpečnost</p>
+          </li>
+        </ul>
         <div class="mdc-layout-grid__inner">
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Penetrace budov</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Napadení průmyslových systému na SCADA</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Napadení sítí</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Napadení bezdrátových sítí</p>
-          </div>
-          <div class="security-fields__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <p>Odposlech rádiové komunikace včetně GSM</p>
+          <div class="content2 mdc-layout-grid__cell--span-12">
+            <div class="tab_content2 tab_3" id="tab_3">
+              <div class="security-fields__cell">
+                <p>Penetrace budov</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Napadení průmyslových systému na SCADA</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Napadení sítí</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Napadení bezdrátových sítí</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Odposlech rádiové komunikace včetně GSM</p>
+              </div>
+            </div>
+            <div class="tab_content2 tab_4" id="tab_4">
+              <div class="security-fields__cell">
+                <p>Code review</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>OSINT&nbsp;&ndash; Maltego, vytěžení veřejně dostupných informací&nbsp;atd.</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Exploit development</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Incident response&nbsp;&ndash; analyzovat logy, dumpnout RAMku&nbsp;atd.</p>
+              </div>
+            </div>
+            <div class="tab_content2 tab_5" id="tab_5">
+              <div class="security-fields__cell">
+                <p>Analýzy a audity</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Analýza rizik</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Analýza dopadů (BIA)</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Analýza shody se ZoKB</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Analýza shody s&nbsp;GDPR</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Bezpečnostní audit ICT</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Informační bezpečnost</p>
+              </div>
+              <div class="security-fields__cell">
+                <p>Školení: bezpečnost pro uživatele</p>
+              </div>
+            </div>
           </div>
         </div>
+        <script>
+          $(".content2 .tab_content2").hide();
+          $(".content2 .tab_content2:first-child").show();
+
+          $(".tabs2 ul li").click(function() {
+
+            $(".tabs2 ul li").removeClass("active2");
+            $(this).addClass("active2");
+
+            var current_tab = $(this).attr("data-list");
+            $(".content2 .tab_content2").hide();
+            $("." + current_tab).show();
+          });
+
+
+          var ul = document.getElementById("tabs_ul2");
+          var li_tabs = ul.getElementsByTagName("li");
+          for (var i = 0; i < li_tabs.length; i++) {
+            li_tabs[i].addEventListener("click", function() {
+              var current = ul.getElementsByClassName("active2");
+              current[0].className = current[0].className.replace("active2", "");
+              this.className += "active2";
+
+              var current_tab_value = this.getAttribute("data-list");
+              document.getElementById(current_tab_value).style.display = "block";
+
+            });
+          }
+
+        </script>
       </div>
 
     </div>
@@ -243,40 +375,6 @@
     <a class="action-button" href="mailto:securitylab@topmonks.com">securitylab@topmonks.com</a>
   </div>
 </footer>
-<div class="wrapper">
-  <div class="tabs">
-    <ul id="tabs_ul">
-      <li class="active" data-list="tab_1">
-        <img src="https://i.imgur.com/aelCqkn.png" alt="">
-        <p>Bicycle</p>
-      </li>
-      <li data-list="tab_2">
-        <img src="https://i.imgur.com/Z5chKaj.png" alt="">
-        Bike</li>
-      <li data-list="tab_3">
-        <img src="https://i.imgur.com/qM93vBh.png" alt="">
-        Car</li>
-      <li data-list="tab_4">
-        <img src="https://i.imgur.com/hG9lT5Z.png" alt="">
-        Truck</li>
-    </ul>
-  </div>
-  <div class="content">
-    <div class="tab_content tab_1" id="tab_1" style="display:block;">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </div>
-    <div class="tab_content tab_2" id="tab_2" style="display:none;">
-      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-    </div>
-    <div class="tab_content tab_3" id="tab_3" style="display:none;">
-      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-    </div>
-    <div class="tab_content tab_4" id="tab_4" style="display:none;">
-      making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics
-    </div>
-  </div>
-</div>
-
 
 
 </body>
